# UserArticlesManager

./: .coverage  .env.example  .githab-ci.yml  .gitignore  Articles_Manager.postman_collection.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2a8e31738040_initial_migration_for_articles_and_users.py
tests/: conftest.py  test_article_routes.py  test_user_routes.py
userarticlesmanager/: __init__.py  config.py  extensions.py  swagger_config.yml  test_config.py
userarticlesmanager/models/: article.py  user.py
userarticlesmanager/routes/: __init__.py  article_routes.py  user_routes.py
userarticlesmanager/services/: user_service.py
userarticlesmanager/utils/: database.py
