[tool.poetry]
name = "userarticlesmanager"
version = "0.1.0"
description = ""
authors = ["OlesiaBarannik <olesiabarannik@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
pyjwt = "^2.10.0"
werkzeug = "^3.1.3"
flask-jwt-extended = "^4.7.1"
flasgger = "^0.9.7.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
